--- a/app/views/user_mailer/password_recovery_email.html.erb
+++ b/app/views/user_mailer/password_recovery_email.html.erb
@@ -7,7 +7,7 @@
  </p>
 
  
-Recover Your Password: <<%= link_to "#{Rails.application.credentials[:mail][:frontend_url]}/password_recovery/#{@user.reset_password_token}" , "#{Rails.application.credentials[:mail][:frontend_url]}/password_recovery/#{@user.reset_password_token}" %>
+Recover Your Password: <<%= link_to "#{Rails.application.credentials[:mail][:frontend_url]}passwordrecovery/#{@user.reset_password_token}" , "#{Rails.application.credentials[:mail][:frontend_url]}/password_recovery/#{@user.reset_password_token}" %>
 <br>
 Note: If you want to change your password, you must click the link above within the next 5 hours. After that, the link will expire for your protection. If you still need to recover your password, just start the password recovery process over from the beginning.
 <br>
