created checkout endpoint in under orders controller. this is meant to verify the user's cart before making any purchase and send a httponly cookie with the untouchable information. Also made changes to the item_materials serializer and added new attribute to the item serializer

--- a/app/views/user_mailer/password_recovery_email.text.erb
+++ b/app/views/user_mailer/password_recovery_email.text.erb
@@ -6,7 +6,7 @@
  If that's the case, just click on the link below and we'll take you to where you can change your password. If you didn't submit a password recovery request, just ignore this email -- your account has in no way been compromised.
 
  
- Recover Your Password: <<%= link_to "#{Rails.application.credentials[:mail][:frontend_url]}passwordrecovery/#{@user.reset_password_token}" , "#{Rails.application.credentials[:mail][:frontend_url]}/password_recovery/#{@user.reset_password_token}" %>
+ Recover Your Password: <<%= link_to "#{Rails.application.credentials[:mail][:frontend_url]}passwordrecovery/#{@user.reset_password_token}" , "#{Rails.application.credentials[:mail][:frontend_url]}passwordrecovery/#{@user.reset_password_token}" %>
 
 
 Note: If you want to change your password, you must click the link above within the next 5 hours. After that, the link will expire for your protection. If you still need to recover your password, just start the password recovery process over from the beginning.
