--- a/app/views/order_mailer/receipt.html.erb
+++ b/app/views/order_mailer/receipt.html.erb
@@ -20,7 +20,7 @@
 <h2> Dear <%= @user.name.titleize %>,</h2>
 
 <p>
-Thank you for your <strong><%= Rails.application.credentials[:mail][:frontend_name] %></strong> purchase. A receipt of your purchase is below. Be Sure to keep it in a safe place for future reference
+Thank you for your <strong><%= Rails.application.credentials[:mail][:frontend_name] %></strong> purchase. A receipt of your purchase is below. Be sure to keep it in a safe place for future reference
 </p>
 
 <p>
@@ -66,13 +66,21 @@ Thank you for your <strong><%= Rails.application.credentials[:mail][:frontend_na
 </table>
 </p>
 
+<p>
 <aside>
    
     <div>
         <p>This e-mail message has been delivered from a send-only address. Please do not reply to this message.</p>
     </div>
-</aside>
+    
+    <p><strong>
+        This site is currently not "active" and is not actually charging your card, though the card information was sent through Stripe Test environment. This was done as part of a
+        project by Luis Reyes Bartolome. Check out my resume which I attached and head over <%= link_to "HERE", "https://LuisReyesBartolome.com" %> to see my portfolio and other projects of mine.
 
+    </strong>
+    </p>
+</aside>
+</p>
 
 
 
