turned up the custom works mail view. Also set up mailer preview for the inquries

--- a/app/views/inquiry_mailer/custom_jewelry.html.erb
+++ b/app/views/inquiry_mailer/custom_jewelry.html.erb
@@ -34,7 +34,7 @@
                 </tr>
                 <tr>
                     <td style="border: 1px solid black; background-color: green"> Budget: </td>
-                    <td style="float: right; padding: 1em"> <%= "#{@details[:budget]}" %> 
+                    <td style="float: right; padding: 1em"><%= "$#{@details[:budget]}" %> 
                 </tr>
                
                 <tr>
@@ -53,6 +53,12 @@
             
     </tbody>
 </table>
+
+<aside>
+<div style="border-top: 1px solid gray; margin-top:10px;">
+        <p style="color:grey">This e-mail message has been delivered from a send-only address. Please do not reply to this message.</p>
+    </div>
+</aside
         
         
     
